# DiskBackupAndRestore-ToolBox

./: DiskRestoreAndBackup.py  README.md  backupUI.py  mainUI.py  mainUIByPYQT6.py  moudleTest.py  pyproject.toml  restoreUI.py  settings.txt  settingsUI.py
