[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DiskBackupAndRestore"
version = "1.0.3"
description = "A short description of your package"
readme = "README.md"
requires-python = ">=3.4"
license = {text = "MPL-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["my_package*"]
exclude = ["tests*"]
